add Equipment menu